parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls vdecl
   4        | decls fdecl

   5  fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

   6  formals_opt :
   7              | formal_list

   8  formal_list : typ ID
   9              | formal_list COMMA typ ID

  10  typ : INT
  11      | BOOL
  12      | FLOAT
  13      | STRING
  14      | MATRIX
  15      | VOID

  16  vdecl_list :
  17             | vdecl_list vdecl

  18  vdecl : typ ID SEMI

  19  stmt_list :
  20            | stmt_list stmt

  21  stmt : expr SEMI
  22       | RETURN expr_opt SEMI
  23       | LBRACE stmt_list RBRACE
  24       | IF LPAREN expr RPAREN stmt
  25       | IF LPAREN expr RPAREN stmt ELSE stmt
  26       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  27       | WHILE LPAREN expr RPAREN stmt

  28  expr_opt :
  29           | expr

  30  expr : LITERAL
  31       | FLIT
  32       | TRUE
  33       | FALSE
  34       | STRLIT
  35       | ID
  36       | expr PLUS expr
  37       | expr MINUS expr
  38       | expr TIMES expr
  39       | expr EXP expr
  40       | expr ELEMTIMES expr
  41       | expr DIVIDE expr
  42       | expr ELEMDIVIDE expr
  43       | expr MOD expr
  44       | expr EQ expr
  45       | expr NEQ expr
  46       | expr LT expr
  47       | expr LEQ expr
  48       | expr GT expr
  49       | expr GEQ expr
  50       | expr AND expr
  51       | expr OR expr
  52       | MINUS expr
  53       | NOT expr
  54       | expr PLUSPLUS
  55       | expr MINUSMINUS
  56       | expr TRANSPOSE
  57       | ID ASSIGN expr
  58       | ID LPAREN args_opt RPAREN
  59       | LPAREN expr RPAREN
  60       | LBRACKET mat_rows RBRACKET

  61  mat_rows : LBRACKET args_opt RBRACKET
  62           | mat_rows SEMI LBRACKET args_opt RBRACKET

  63  args_opt :
  64           | args_list

  65  args_list : expr
  66            | args_list COMMA expr

  67  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (67)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (67)

	.  reduce 67


state 4
	program : decls . EOF  (1)
	decls : decls . vdecl  (3)
	decls : decls . fdecl  (4)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	MATRIX  shift 9
	STRING  shift 10
	EOF  shift 11
	.  error

	vdecl  goto 12
	fdecl  goto 13
	typ  goto 14


state 5
	typ : INT .  (10)

	.  reduce 10


state 6
	typ : BOOL .  (11)

	.  reduce 11


state 7
	typ : FLOAT .  (12)

	.  reduce 12


state 8
	typ : VOID .  (15)

	.  reduce 15


state 9
	typ : MATRIX .  (14)

	.  reduce 14


state 10
	typ : STRING .  (13)

	.  reduce 13


state 11
	program : decls EOF .  (1)

	.  reduce 1


state 12
	decls : decls vdecl .  (3)

	.  reduce 3


state 13
	decls : decls fdecl .  (4)

	.  reduce 4


state 14
	fdecl : typ . ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	vdecl : typ . ID SEMI  (18)

	ID  shift 15
	.  error


state 15
	fdecl : typ ID . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	vdecl : typ ID . SEMI  (18)

	SEMI  shift 16
	LPAREN  shift 17
	.  error


state 16
	vdecl : typ ID SEMI .  (18)

	.  reduce 18


state 17
	fdecl : typ ID LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	formals_opt : .  (6)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	MATRIX  shift 9
	STRING  shift 10
	RPAREN  reduce 6

	typ  goto 18
	formals_opt  goto 19
	formal_list  goto 20


state 18
	formal_list : typ . ID  (8)

	ID  shift 21
	.  error


state 19
	fdecl : typ ID LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)

	RPAREN  shift 22
	.  error


state 20
	formals_opt : formal_list .  (7)
	formal_list : formal_list . COMMA typ ID  (9)

	COMMA  shift 23
	RPAREN  reduce 7


state 21
	formal_list : typ ID .  (8)

	.  reduce 8


state 22
	fdecl : typ ID LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE  (5)

	LBRACE  shift 24
	.  error


state 23
	formal_list : formal_list COMMA . typ ID  (9)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	MATRIX  shift 9
	STRING  shift 10
	.  error

	typ  goto 25


state 24
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE  (5)
	vdecl_list : .  (16)

	.  reduce 16

	vdecl_list  goto 26


state 25
	formal_list : formal_list COMMA typ . ID  (9)

	ID  shift 27
	.  error


state 26
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list . stmt_list RBRACE  (5)
	vdecl_list : vdecl_list . vdecl  (17)
	stmt_list : .  (19)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	MATRIX  shift 9
	STRING  shift 10
	LPAREN  reduce 19
	LBRACE  reduce 19
	RBRACE  reduce 19
	LBRACKET  reduce 19
	MINUS  reduce 19
	NOT  reduce 19
	TRUE  reduce 19
	FALSE  reduce 19
	RETURN  reduce 19
	IF  reduce 19
	FOR  reduce 19
	WHILE  reduce 19
	LITERAL  reduce 19
	FLIT  reduce 19
	ID  reduce 19
	STRLIT  reduce 19

	vdecl  goto 28
	typ  goto 29
	stmt_list  goto 30


state 27
	formal_list : formal_list COMMA typ ID .  (9)

	.  reduce 9


state 28
	vdecl_list : vdecl_list vdecl .  (17)

	.  reduce 17


state 29
	vdecl : typ . ID SEMI  (18)

	ID  shift 31
	.  error


state 30
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list . RBRACE  (5)
	stmt_list : stmt_list . stmt  (20)

	LPAREN  shift 32
	LBRACE  shift 33
	RBRACE  shift 34
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	RETURN  shift 40
	IF  shift 41
	FOR  shift 42
	WHILE  shift 43
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	stmt  goto 48
	expr  goto 49


state 31
	vdecl : typ ID . SEMI  (18)

	SEMI  shift 16
	.  error


state 32
	expr : LPAREN . expr RPAREN  (59)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 50


state 33
	stmt : LBRACE . stmt_list RBRACE  (23)
	stmt_list : .  (19)

	.  reduce 19

	stmt_list  goto 51


state 34
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE .  (5)

	.  reduce 5


state 35
	expr : LBRACKET . mat_rows RBRACKET  (60)

	LBRACKET  shift 52
	.  error

	mat_rows  goto 53


state 36
	expr : MINUS . expr  (52)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 54


state 37
	expr : NOT . expr  (53)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 55


state 38
	expr : TRUE .  (32)

	.  reduce 32


state 39
	expr : FALSE .  (33)

	.  reduce 33


state 40
	stmt : RETURN . expr_opt SEMI  (22)
	expr_opt : .  (28)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	SEMI  reduce 28

	expr  goto 56
	expr_opt  goto 57


state 41
	stmt : IF . LPAREN expr RPAREN stmt  (24)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (25)

	LPAREN  shift 58
	.  error


state 42
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (26)

	LPAREN  shift 59
	.  error


state 43
	stmt : WHILE . LPAREN expr RPAREN stmt  (27)

	LPAREN  shift 60
	.  error


state 44
	expr : LITERAL .  (30)

	.  reduce 30


state 45
	expr : FLIT .  (31)

	.  reduce 31


state 46
	expr : ID .  (35)
	expr : ID . ASSIGN expr  (57)
	expr : ID . LPAREN args_opt RPAREN  (58)

	LPAREN  shift 61
	ASSIGN  shift 62
	SEMI  reduce 35
	RPAREN  reduce 35
	COMMA  reduce 35
	RBRACKET  reduce 35
	PLUS  reduce 35
	PLUSPLUS  reduce 35
	MINUS  reduce 35
	MINUSMINUS  reduce 35
	TIMES  reduce 35
	EXP  reduce 35
	ELEMTIMES  reduce 35
	DIVIDE  reduce 35
	ELEMDIVIDE  reduce 35
	TRANSPOSE  reduce 35
	MOD  reduce 35
	EQ  reduce 35
	NEQ  reduce 35
	LT  reduce 35
	LEQ  reduce 35
	GT  reduce 35
	GEQ  reduce 35
	AND  reduce 35
	OR  reduce 35


state 47
	expr : STRLIT .  (34)

	.  reduce 34


state 48
	stmt_list : stmt_list stmt .  (20)

	.  reduce 20


state 49
	stmt : expr . SEMI  (21)
	expr : expr . PLUS expr  (36)
	expr : expr . MINUS expr  (37)
	expr : expr . TIMES expr  (38)
	expr : expr . EXP expr  (39)
	expr : expr . ELEMTIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . ELEMDIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . GT expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . PLUSPLUS  (54)
	expr : expr . MINUSMINUS  (55)
	expr : expr . TRANSPOSE  (56)

	SEMI  shift 63
	PLUS  shift 64
	PLUSPLUS  shift 65
	MINUS  shift 66
	MINUSMINUS  shift 67
	TIMES  shift 68
	EXP  shift 69
	ELEMTIMES  shift 70
	DIVIDE  shift 71
	ELEMDIVIDE  shift 72
	TRANSPOSE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LEQ  shift 78
	GT  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	.  error


state 50
	expr : expr . PLUS expr  (36)
	expr : expr . MINUS expr  (37)
	expr : expr . TIMES expr  (38)
	expr : expr . EXP expr  (39)
	expr : expr . ELEMTIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . ELEMDIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . GT expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . PLUSPLUS  (54)
	expr : expr . MINUSMINUS  (55)
	expr : expr . TRANSPOSE  (56)
	expr : LPAREN expr . RPAREN  (59)

	RPAREN  shift 83
	PLUS  shift 64
	PLUSPLUS  shift 65
	MINUS  shift 66
	MINUSMINUS  shift 67
	TIMES  shift 68
	EXP  shift 69
	ELEMTIMES  shift 70
	DIVIDE  shift 71
	ELEMDIVIDE  shift 72
	TRANSPOSE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LEQ  shift 78
	GT  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	.  error


state 51
	stmt_list : stmt_list . stmt  (20)
	stmt : LBRACE stmt_list . RBRACE  (23)

	LPAREN  shift 32
	LBRACE  shift 33
	RBRACE  shift 84
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	RETURN  shift 40
	IF  shift 41
	FOR  shift 42
	WHILE  shift 43
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	stmt  goto 48
	expr  goto 49


state 52
	mat_rows : LBRACKET . args_opt RBRACKET  (61)
	args_opt : .  (63)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	RBRACKET  reduce 63

	expr  goto 85
	args_opt  goto 86
	args_list  goto 87


state 53
	expr : LBRACKET mat_rows . RBRACKET  (60)
	mat_rows : mat_rows . SEMI LBRACKET args_opt RBRACKET  (62)

	SEMI  shift 88
	RBRACKET  shift 89
	.  error


state 54
	expr : expr . PLUS expr  (36)
	expr : expr . MINUS expr  (37)
	expr : expr . TIMES expr  (38)
	expr : expr . EXP expr  (39)
	expr : expr . ELEMTIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . ELEMDIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . GT expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : MINUS expr .  (52)
	expr : expr . PLUSPLUS  (54)
	expr : expr . MINUSMINUS  (55)
	expr : expr . TRANSPOSE  (56)

	PLUSPLUS  shift 65
	MINUSMINUS  shift 67
	TRANSPOSE  shift 73
	SEMI  reduce 52
	RPAREN  reduce 52
	COMMA  reduce 52
	RBRACKET  reduce 52
	PLUS  reduce 52
	MINUS  reduce 52
	TIMES  reduce 52
	EXP  reduce 52
	ELEMTIMES  reduce 52
	DIVIDE  reduce 52
	ELEMDIVIDE  reduce 52
	MOD  reduce 52
	EQ  reduce 52
	NEQ  reduce 52
	LT  reduce 52
	LEQ  reduce 52
	GT  reduce 52
	GEQ  reduce 52
	AND  reduce 52
	OR  reduce 52


state 55
	expr : expr . PLUS expr  (36)
	expr : expr . MINUS expr  (37)
	expr : expr . TIMES expr  (38)
	expr : expr . EXP expr  (39)
	expr : expr . ELEMTIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . ELEMDIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . GT expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : NOT expr .  (53)
	expr : expr . PLUSPLUS  (54)
	expr : expr . MINUSMINUS  (55)
	expr : expr . TRANSPOSE  (56)

	PLUSPLUS  shift 65
	MINUSMINUS  shift 67
	TRANSPOSE  shift 73
	SEMI  reduce 53
	RPAREN  reduce 53
	COMMA  reduce 53
	RBRACKET  reduce 53
	PLUS  reduce 53
	MINUS  reduce 53
	TIMES  reduce 53
	EXP  reduce 53
	ELEMTIMES  reduce 53
	DIVIDE  reduce 53
	ELEMDIVIDE  reduce 53
	MOD  reduce 53
	EQ  reduce 53
	NEQ  reduce 53
	LT  reduce 53
	LEQ  reduce 53
	GT  reduce 53
	GEQ  reduce 53
	AND  reduce 53
	OR  reduce 53


state 56
	expr_opt : expr .  (29)
	expr : expr . PLUS expr  (36)
	expr : expr . MINUS expr  (37)
	expr : expr . TIMES expr  (38)
	expr : expr . EXP expr  (39)
	expr : expr . ELEMTIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . ELEMDIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . GT expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . PLUSPLUS  (54)
	expr : expr . MINUSMINUS  (55)
	expr : expr . TRANSPOSE  (56)

	PLUS  shift 64
	PLUSPLUS  shift 65
	MINUS  shift 66
	MINUSMINUS  shift 67
	TIMES  shift 68
	EXP  shift 69
	ELEMTIMES  shift 70
	DIVIDE  shift 71
	ELEMDIVIDE  shift 72
	TRANSPOSE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LEQ  shift 78
	GT  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	SEMI  reduce 29
	RPAREN  reduce 29


state 57
	stmt : RETURN expr_opt . SEMI  (22)

	SEMI  shift 90
	.  error


state 58
	stmt : IF LPAREN . expr RPAREN stmt  (24)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (25)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 91


state 59
	stmt : FOR LPAREN . expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (26)
	expr_opt : .  (28)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	SEMI  reduce 28

	expr  goto 56
	expr_opt  goto 92


state 60
	stmt : WHILE LPAREN . expr RPAREN stmt  (27)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 93


state 61
	expr : ID LPAREN . args_opt RPAREN  (58)
	args_opt : .  (63)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	RPAREN  reduce 63

	expr  goto 85
	args_opt  goto 94
	args_list  goto 87


state 62
	expr : ID ASSIGN . expr  (57)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 95


state 63
	stmt : expr SEMI .  (21)

	.  reduce 21


state 64
	expr : expr PLUS . expr  (36)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 96


state 65
	expr : expr PLUSPLUS .  (54)

	.  reduce 54


state 66
	expr : expr MINUS . expr  (37)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 97


state 67
	expr : expr MINUSMINUS .  (55)

	.  reduce 55


state 68
	expr : expr TIMES . expr  (38)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 98


state 69
	expr : expr EXP . expr  (39)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 99


state 70
	expr : expr ELEMTIMES . expr  (40)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 100


state 71
	expr : expr DIVIDE . expr  (41)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 101


state 72
	expr : expr ELEMDIVIDE . expr  (42)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 102


state 73
	expr : expr TRANSPOSE .  (56)

	.  reduce 56


state 74
	expr : expr MOD . expr  (43)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 103


state 75
	expr : expr EQ . expr  (44)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 104


state 76
	expr : expr NEQ . expr  (45)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 105


state 77
	expr : expr LT . expr  (46)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 106


state 78
	expr : expr LEQ . expr  (47)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 107


state 79
	expr : expr GT . expr  (48)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 108


state 80
	expr : expr GEQ . expr  (49)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 109


state 81
	expr : expr AND . expr  (50)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 110


state 82
	expr : expr OR . expr  (51)

	LPAREN  shift 32
	LBRACKET  shift 35
	MINUS  shift 36
	NOT  shift 37
	TRUE  shift 38
	FALSE  shift 39
	LITERAL  shift 44
	FLIT  shift 45
	ID  shift 46
	STRLIT  shift 47
	.  error

	expr  goto 111


state 83
	expr : LPAREN expr RPAREN .  (59)

	.  reduce 59


state 84
	stmt : LBRACE stmt_list RBRACE .  (23)

	.  reduce 23


state 85
	expr : expr . PLUS expr  (36)
	expr : expr . MINUS expr  (37)
	expr : expr . TIMES expr  (38)
	expr : expr . EXP expr  (39)
	expr : expr . ELEMTIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . ELEMDIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . GT expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . PLUSPLUS  (54)
	expr : expr . MINUSMINUS  (55)
	expr : expr . TRANSPOSE  (56)
	args_list : expr .  (65)

	PLUS  shift 64
	PLUSPLUS  shift 65
	MINUS  shift 66
	MINUSMINUS  shift 67
	TIMES  shift 68
	EXP  shift 69
	ELEMTIMES  shift 70
	DIVIDE  shift 71
	ELEMDIVIDE  shift 72
	TRANSPOSE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LEQ  shift 78
	GT  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	RPAREN  reduce 65
	COMMA  reduce 65
	RBRACKET  reduce 65


state 86
	mat_rows : LBRACKET args_opt . RBRACKET  (61)

	RBRACKET  shift 112
	.  error


state 87
	args_opt : args_list .  (64)
	args_list : args_list . COMMA expr  (66)

	COMMA  shift 113
	RPAREN  reduce 64
	RBRACKET  reduce 64


state 88
	mat_rows : mat_rows SEMI . LBRACKET args_opt RBRACKET  (62)

	LBRACKET  shift 114
	.  error


state 89
	expr : LBRACKET mat_rows RBRACKET .  (60)

	.  reduce 60


state 90
	stmt : RETURN expr_opt SEMI .  (22)

	.  reduce 22


state 91
	stmt : IF LPAREN expr . RPAREN stmt  (24)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (25)
	expr : expr . PLUS expr  (36)
	expr : expr . MINUS expr  (37)
	expr : expr . TIMES expr  (38)
	expr : expr . EXP expr  (39)
	expr : expr . ELEMTIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . ELEMDIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . GT expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . PLUSPLUS  (54)
	expr : expr . MINUSMINUS  (55)
	expr : expr . TRANSPOSE  (56)

	RPAREN  shift 115
	PLUS  shift 64
	PLUSPLUS  shift 65
	MINUS  shift 66
	MINUSMINUS  shift 67
	TIMES  shift 68
	EXP  shift 69
	ELEMTIMES  shift 70
	DIVIDE  shift 71
	ELEMDIVIDE  shift 72
	TRANSPOSE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LEQ  shift 78
	GT  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	.  error


state 92
	stmt : FOR LPAREN expr_opt . SEMI expr SEMI expr_opt RPAREN stmt  (26)

	SEMI  shift 116
	.  error


state 93
	stmt : WHILE LPAREN expr . RPAREN stmt  (27)
	expr : expr . PLUS expr  (36)
	expr : expr . MINUS expr  (37)
	expr : expr . TIMES expr  (38)
	expr : expr . EXP expr  (39)
	expr : expr . ELEMTIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . ELEMDIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . GT expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . PLUSPLUS  (54)
	expr : expr . MINUSMINUS  (55)
	expr : expr . TRANSPOSE  (56)

	RPAREN  shift 117
	PLUS  shift 64
	PLUSPLUS  shift 65
	MINUS  shift 66
	MINUSMINUS  shift 67
	TIMES  shift 68
	EXP  shift 69
	ELEMTIMES  shift 70
	DIVIDE  shift 71
	ELEMDIVIDE  shift 72
	TRANSPOSE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LEQ  shift 78
	GT  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	.  error


state 94
	expr : ID LPAREN args_opt . RPAREN  (58)

	RPAREN  shift 118
	.  error

